--- a/languages/menu-item-types-fr_FR.po
+++ b/languages/menu-item-types-fr_FR.po
@@ -3,7 +3,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "Project-Id-Version: Menu Item Types\n"
 "POT-Creation-Date: 2021-10-05 20:57+0200\n"
-"PO-Revision-Date: 2021-10-05 20:57+0200\n"
+"PO-Revision-Date: 2021-10-05 23:50+0200\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,122 +20,122 @@ msgstr ""
 
 #: inc/acf/acf.php:45
 msgid "Please install and activate"
-msgstr ""
+msgstr "Veuillez installer et activer"
 
 #: inc/acf/acf.php:45
 msgid "for using Menu Item Types plugin."
-msgstr ""
+msgstr "Pour utiliser l’extension Menu Item Types."
 
 #: inc/acf/field-groups/heading.php:11
 msgid "Heading settings group"
-msgstr ""
+msgstr "Groupe de paramètres de titre"
 
 #: inc/acf/field-groups/heading.php:17
 msgid "Heading level"
-msgstr ""
+msgstr "Niveau de titre"
 
 #: inc/acf/field-groups/heading.php:32
 msgid "Heading 2"
-msgstr ""
+msgstr "Titre 2"
 
 #: inc/acf/field-groups/heading.php:33
 msgid "Heading 3"
-msgstr ""
+msgstr "Titre 3"
 
 #: inc/acf/field-groups/heading.php:34
 msgid "Heading 4"
-msgstr ""
+msgstr "Titre 4"
 
 #: inc/acf/field-groups/heading.php:35
 msgid "Heading 5"
-msgstr ""
+msgstr "Titre 5"
 
 #: inc/acf/field-groups/heading.php:36
 msgid "Heading 6"
-msgstr ""
+msgstr "Titre 6"
 
 #: inc/acf/field-groups/image.php:10
 msgid "Image settings group"
-msgstr ""
+msgstr "Groupe de paramètres d'image"
 
 #: inc/acf/field-groups/image.php:16 inc/item-types.php:10
 msgid "Image"
-msgstr ""
+msgstr "Image"
 
 #: inc/acf/field-groups/image.php:45
 msgid "Size"
-msgstr ""
+msgstr "Dimension"
 
 #: inc/acf/field-groups/nolink.php:10
 msgid "Nolink settings group"
-msgstr ""
+msgstr "Groupe de paramètres d'élément sans lien"
 
 #: inc/acf/field-groups/paragraph.php:12
 msgid "Paragraph settings group"
-msgstr ""
+msgstr "Groupe de paramètres de paragraphe"
 
 #: inc/acf/field-groups/paragraph.php:18
 msgid "Text"
-msgstr ""
+msgstr "Texte"
 
 #. Plugin Name of the plugin/theme
 #: inc/acf/location/acf-mitypes-locations.php:9
 msgid "Menu Item Types"
-msgstr ""
+msgstr "Menu Item Types"
 
 #: inc/item-types.php:7
 msgid "No link"
-msgstr ""
+msgstr "Sans lien"
 
 #: inc/item-types.php:8
 msgid "Heading"
-msgstr ""
+msgstr "Titre"
 
 #: inc/item-types.php:9
 msgid "Paragraph"
-msgstr ""
+msgstr "Paragraphe"
 
 #: inc/item-types.php:12
 msgid "Post Type Archive"
-msgstr ""
+msgstr "Archive de type de contenu"
 
 #: inc/metabox/item-types/mitypes-item-type-custom.php:24
 msgid "Custom Items"
-msgstr ""
+msgstr "Éléments personnalisés"
 
 #: inc/metabox/item-types/mitypes-item-type-custom.php:89
 msgid "MITYPES"
-msgstr ""
+msgstr "MITYPES"
 
 #: inc/metabox/item-types/mitypes-item-type-custom.php:121
 #: inc/metabox/item-types/mitypes-item-type-post_type_archive.php:129
 msgid "Add to Menu"
-msgstr ""
+msgstr "Ajouter au menu"
 
 #: inc/metabox/item-types/mitypes-item-type-post_type_archive.php:24
 msgid "Post Type Archives"
-msgstr ""
+msgstr "Archives de type de contenu"
 
 #: inc/metabox/item-types/mitypes-item-type-post_type_archive.php:70
 msgid "No items."
-msgstr ""
+msgstr "Aucun élément."
 
 #: inc/metabox/item-types/mitypes-item-type-post_type_archive.php:82
 msgid "View All"
-msgstr ""
+msgstr "Voir tout"
 
 #. Plugin URI of the plugin/theme
 msgid "https://maxpertici.fr#menu-item-types"
-msgstr ""
+msgstr "https://maxpertici.fr#menu-item-types"
 
 #. Description of the plugin/theme
 msgid "Use elements of a personalized type in the navigation menus."
-msgstr ""
+msgstr "Utilisez des éléments de type personnalisé dans les menus de navigation."
 
 #. Author of the plugin/theme
 msgid "Maxime Pertici"
-msgstr ""
+msgstr "Maxime Pertici"
 
 #. Author URI of the plugin/theme
 msgid "https://maxpertici.fr"
-msgstr ""
+msgstr "https://maxpertici.fr"
