--- a/languages/menu-item-types.pot
+++ b/languages/menu-item-types.pot
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 "Project-Id-Version: Menu Item Types\n"
-"POT-Creation-Date: 2021-10-05 20:57+0200\n"
+"POT-Creation-Date: 2021-12-18 22:02+0100\n"
 "PO-Revision-Date: 2021-10-05 20:56+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -15,8 +15,8 @@ msgstr ""
 "X-Poedit-WPHeader: menu-item-types.php\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
-"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
-"_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
+"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;"
+"_n_noop:1,2;_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
 
@@ -135,7 +135,7 @@ msgid "Use elements of a personalized type in the navigation menus."
 msgstr ""
 
 #. Author of the plugin/theme
-msgid "Maxime Pertici"
+msgid "@maxpertici"
 msgstr ""
 
 #. Author URI of the plugin/theme
